# signal-layer-agentic-rag-workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/ag/: __init__.py  agno_agent.py  agno_runner.py  agno_tools.py  schemas.py
app/agents/: __init__.py  agno_agent.py  agno_tools.py  schemas.py
app/api/: routes_agent.py  routes_business.py  routes_documents.py  routes_evals.py  routes_health.py  routes_runs.py
app/core/: budgets.py  config.py  deployment.py  errors.py  security.py  timing.py
app/db/: __init__.py  business_repositories.py  models.py  repositories.py  session.py
app/documents/: __init__.py  docling_parser.py  markdown_parser.py  parser.py  service.py  text_parser.py  types.py
app/evals/: __init__.py  cases.py  metrics.py  report.py  runner.py  service.py
app/frontend/: index.html
app/mcp/: __init__.py  (+3 more)
docs/: architecture.md  demo-script.md  demo.md  deployment.md  future-extensions.md  hosted-demo-runbook.md  production-readiness.md
samples/: commercial_policy.md
scripts/: demo_smoke.py  deployment_smoke.py  run_evals.py  seed_business_data.py  seed_postgres.py
tests/: test_agent.py  test_agno_agent.py  test_business.py  test_chunking.py  test_deployment.py  test_deployment_smoke.py  test_documents.py  test_embeddings.py  test_evals.py  test_frontend.py  test_hardening.py  test_health.py  test_mcp.py  test_providers.py  test_runs.py  test_security.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+38 files in other folders)
